# diptool

./: .gitmodules  CMakeLists.txt  CheckerBoardImage.cpp  CheckerBoardImage.h  DownsampleMenu.cpp  DownsampleMenu.h  Menu.cpp  Menu.h  MenuOps.h  README.md  main.cpp  quick-build-msys.sh  quick-build-vs.ps1
.github/workflows/: cmake-single-platform.yml
common/: cjthread.cpp  cjthread.h  cthread.cpp  cthread.h  cthreadpool.cpp  cthreadpool.h
imageops/: colormodel.cpp  colormodel.h
libs/patches/sfml/: README.md  onresize_win32_2.6.0.patch
menus/: DownsampleMenu.cpp  DownsampleMenu.h  HistogramEqualizationMenu.cpp  HistogramEqualizationMenu.h  Menu.cpp  Menu.h  SpatialFilterMenu.cpp  SpatialFilterMenu.h  StackMenu.cpp  StackMenu.h  UpsampleMenu.cpp  UpsampleMenu.h  VaryBitsMenu.cpp  VaryBitsMenu.h
operations/: DownsampleOp.cpp  DownsampleOp.h  HistogramEqualizationOp.cpp  HistogramEqualizationOp.h  HistogramOp.cpp  HistogramOp.h  ImageOperation.cpp  ImageOperation.h  MenuOps.h  OperationsStack.cpp  OperationsStack.h  RunLengthCodec.cpp  RunLengthCodec.h  SpatialFilterOp.cpp  SpatialFilterOp.h  UpsampleOp.cpp  UpsampleOp.h  VariableLengthCodec.cpp  VariableLengthCodec.h  VaryBitsOp.cpp  VaryBitsOp.h
scripts/linux/: build-sfml.sh
scripts/win-mingw/: build-imgui-sfml.sh
scripts/win-vs/: build-imgui-sfml.ps1  build-sfml.ps1
utilities/: CheckerBoardImage.cpp  CheckerBoardImage.h
